.metadata/.plugins/org.eclipse.cdt.ui/labo_9_1.build.log
21:25:15 **** Incremental Build of configuration Debug for project labo_9_1 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L432xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:113:12: error: redefinition of 'Test'
  113 |    uint8_t Test [] = "10.00 C \r\n " ; //Datos para enviar
      |            ^~~~
../Core/Src/main.c:110:12: note: previous definition of 'Test' was here
  110 |    uint8_t Test [] = "10.00 C \r\n " ; //Datos para enviar
      |            ^~~~
../Core/Src/main.c:116:12: error: redefinition of 'Test'
  116 |    uint8_t Test [] = "10.00 C \r\n " ; //Datos para enviar
      |            ^~~~
../Core/Src/main.c:113:12: note: previous definition of 'Test' was here
  113 |    uint8_t Test [] = "10.00 C \r\n " ; //Datos para enviar
      |            ^~~~
../Core/Src/main.c:119:12: error: redefinition of 'Test'
  119 |    uint8_t Test [] = "10.00 C \r\n " ; //Datos para enviar
      |            ^~~~
../Core/Src/main.c:116:12: note: previous definition of 'Test' was here
  116 |    uint8_t Test [] = "10.00 C \r\n " ; //Datos para enviar
      |            ^~~~
../Core/Src/main.c:122:12: error: redefinition of 'Test'
  122 |    uint8_t Test [] = "10.00 C \r\n " ; //Datos para enviar
      |            ^~~~
../Core/Src/main.c:119:12: note: previous definition of 'Test' was here
  119 |    uint8_t Test [] = "10.00 C \r\n " ; //Datos para enviar
      |            ^~~~
../Core/Src/main.c:125:12: error: redefinition of 'Test'
  125 |    uint8_t Test [] = " 42.30 C \r\n " ; //Datos para enviar
      |            ^~~~
../Core/Src/main.c:122:12: note: previous definition of 'Test' was here
  122 |    uint8_t Test [] = "10.00 C \r\n " ; //Datos para enviar
      |            ^~~~
../Core/Src/main.c:128:12: error: redefinition of 'Test'
  128 |    uint8_t Test [] = "45.00 C \r\n " ; //Datos para enviar
      |            ^~~~
../Core/Src/main.c:125:12: note: previous definition of 'Test' was here
  125 |    uint8_t Test [] = " 42.30 C \r\n " ; //Datos para enviar
      |            ^~~~
../Core/Src/main.c:131:12: error: redefinition of 'Test'
  131 |    uint8_t Test [] = "23.00 C \r\n " ; //Datos para enviar
      |            ^~~~
../Core/Src/main.c:128:12: note: previous definition of 'Test' was here
  128 |    uint8_t Test [] = "45.00 C \r\n " ; //Datos para enviar
      |            ^~~~
../Core/Src/main.c:134:12: error: redefinition of 'Test'
  134 |    uint8_t Test [] = "15.00 C \r\n " ; //Datos para enviar
      |            ^~~~
../Core/Src/main.c:131:12: note: previous definition of 'Test' was here
  131 |    uint8_t Test [] = "23.00 C \r\n " ; //Datos para enviar
      |            ^~~~
../Core/Src/main.c:137:12: error: redefinition of 'Test'
  137 |    uint8_t Test [] = "9.00 C \r\n " ; //Datos para enviar
      |            ^~~~
../Core/Src/main.c:134:12: note: previous definition of 'Test' was here
  134 |    uint8_t Test [] = "15.00 C \r\n " ; //Datos para enviar
      |            ^~~~
../Core/Src/main.c:140:12: error: redefinition of 'Test'
  140 |    uint8_t Test [] = "9.00 C \r\n " ; //Datos para enviar
      |            ^~~~
../Core/Src/main.c:137:12: note: previous definition of 'Test' was here
  137 |    uint8_t Test [] = "9.00 C \r\n " ; //Datos para enviar
      |            ^~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

21:25:18 Build Failed. 11 errors, 0 warnings. (took 2s.791ms)

